// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Project Create Command - Help Text 1`] = `
"stdout:
"Usage: project create [options]

Create a new Linear project

Options:
  -n, --name <name>                Project name (required)
  -d, --description <description>  Project description (max 255 characters,
                                   enforced by Linear's API)
  -f, --description-file <path>    Read project description from file (still
                                   subject to the 255-character API limit)
  --content <markdown>             Project overview markdown
  --content-file <path>            Read project overview markdown from a file
  -t, --team <team>                Team key (can be repeated for multiple teams)
  -l, --lead <lead>                Project lead (username, email, or @me)
  -s, --status <status>            Project status (planned, started, paused,
                                   completed, canceled, backlog)
  --start-date <startDate>         Start date (YYYY-MM-DD)
  --target-date <targetDate>       Target completion date (YYYY-MM-DD)
  --priority <priority>            Project priority (none, urgent, high, medium,
                                   low)
  --label <label>                  Project label associated with the project.
                                   May be repeated.
  --member <user>                  Project member (username, email, display
                                   name, or @me). May be repeated.
  --icon <icon>                    Project icon
  --color <color>                  Project color as a HEX string
  --initiative <initiative>        Add to initiative immediately (ID, slug, or
                                   name)
  -i, --interactive                Interactive mode (default if no flags
                                   provided)
  -j, --json                       Output created project as JSON
  -h, --help                       display help for command
"
stderr:
"""
`;

exports[`Project Create Command - With JSON Output 1`] = `
"stdout:
"{
  "success": true,
  "project": {
    "id": "550e8400-e29b-41d4-a716-446655440000",
    "slugId": "json-test-project",
    "name": "JSON Test Project",
    "url": "https://linear.app/test/project/json-test-project"
  }
}
"
stderr:
"""
`;

exports[`Project Create Command - Description From File 1`] = `
"stdout:
"{
  "success": true,
  "project": {
    "id": "550e8400-e29b-41d4-a716-446655440010",
    "slugId": "file-desc-project",
    "name": "File Desc Project",
    "url": "https://linear.app/test/project/file-desc-project"
  }
}
"
stderr:
"""
`;
